# tracing-gcp

./: Cargo.toml  readme.md
src/: google_cloud_logging.rs  lib.rs
tests/: test.rs
