[package]
name = "tracing-gcp"
version = "0.1.0"
edition = "2021"
license = "UNLICENSE"
description = "tracing subscriber for structured logging in gcp"
license = "BSD-3-Clause"
author = "parth"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
google_cloud_logging = "0.1.0"

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4"] } 
tracing-appender = "0.2"
